--- a/text_generation.ipynb
+++ b/text_generation.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "56949eba",
    "metadata": {},
    "outputs": [
@@ -73,10 +73,10 @@
      "output_type": "stream",
      "text": [
       "LSTM Output:\n",
-      "to be or not to give it stir with paid hither both nay he in grace as up us yet keep they'll be not the faith i can ha sight\n",
+      "to be or not to do this day they undertake i have we darest show me as i had dead i the for content sweet tempted flies who is mercy\n",
       "\n",
       "GRU Output:\n",
-      "to be or not to not with nay good lands and i will never say not on a enemy of them not with very humphrey with your of they empress\n"
+      "to be or not to there is it wilt be i thou the wife i be bid a powers not not is our legs before what young drawer my lord\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "70c56a35",
    "metadata": {},
    "outputs": [
@@ -134,13 +134,13 @@
      "output_type": "stream",
      "text": [
       "Random Seed:\n",
-      "do mock thee thus stamp rave and fret that i may sing and dance thou wouldst be fee'd i see to make me sport york cannot speak unless he wear a crown a crown for york and lords bow low to him hold you his hands whilst i do set\n",
+      "as thou me in troops i have dispersed them the isle the king's son have i landed by himself whom i left cooling of the air with sighs in an odd angle of the isle and sitting his arms in this sad knot of the king's ship the mariners say\n",
       "\n",
       "LSTM Output:\n",
-      "do mock thee thus stamp rave and fret that i may sing and dance thou wouldst be fee'd i see to make me sport york cannot speak unless he wear a crown a crown for york and lords bow low to him hold you his hands whilst i do set so bashful what song down thus from thy lusts lies bring her marry and they base it eyes in you i'll succession in grossly as\n",
+      "as thou me in troops i have dispersed them the isle the king's son have i landed by himself whom i left cooling of the air with sighs in an odd angle of the isle and sitting his arms in this sad knot of the king's ship the mariners say carry i will forsooth in our blood in alarums sickness for true day why shed but merry behold in men like whom because the dread\n",
       "\n",
       "GRU Output:\n",
-      "do mock thee thus stamp rave and fret that i may sing and dance thou wouldst be fee'd i see to make me sport york cannot speak unless he wear a crown a crown for york and lords bow low to him hold you his hands whilst i do set dismiss him memory here cheer make away the third as the warlike despair oil and her poor fight my other ranks comforted to france tis\n"
+      "as thou me in troops i have dispersed them the isle the king's son have i landed by himself whom i left cooling of the air with sighs in an odd angle of the isle and sitting his arms in this sad knot of the king's ship the mariners say thee king penance upon filthy grieving possible know do awhile has welcome my service strike you many anything to leave was near me my man\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     "print(generate_text(lstm_model, tokenizer, seq_len=50, seed_text=seed_text, n_words=25, temperature=1.0))\n",
     "\n",
     "print(\"\\nGRU Output:\")\n",
-    "print(generate_text(gru_model, tokenizer, seq_len=50, seed_text=seed_text, n_words=25, temperature=1.0))\n"
+    "print(generate_text(gru_model, tokenizer, seq_len=50, seed_text=seed_text, n_words=25, temperature=1.0))"
    ]
   }
  ],
